--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GITHUB</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <h1>Primer commit</h1>
-    
+
 </body>
 </html>
