--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Primer commit</h1>
     <h2>Tercer commit</h2>
-
+<img src="https://ar.pinterest.com/pin/marvel-wallpapers--682365781042987687/" alt="imagen marvel-wallpapers--682365781042987687">
+<section>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure nesciunt cum? Sit voluptate delectus est dolorum excepturi eligendi explicabo cum distinctio dolorem, laudantium mollitia, rerum architecto magni quam similique!</p>
+</section>
 </body>
 </html>
